added hero section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,27 @@
     </div>
 
     <main class="section-hero">
-      <img src="img/Homepage/campus.jpg" alt="">
-      <div class="hero"></div>
+      <img src="img/Homepage/campus-2.jpg" alt="" />
+      <div class="hero-overlay">
+        <h1>University of Engineering and Management, Kolkata</h1>
+        <p class="overlay-text">
+          University of Engineering & Management (UEM) aims to provide an
+          international ambience and exposure with innovative teaching
+          techniques and courses which are tailor-made (technical & soft skills)
+          for the job market giving the students the winning edge and
+          competitive advantage during placements.
+        </p>
+        <a class="learn-more-hero" href=""
+          >LEARN MORE<img
+            class="learn-more-hero-icon"
+            src="icons/right-arrow.svg"
+            alt=""
+        /></a>
+      </div>
     </main>
+
+    <!-- <section class="college-desc">
+      <h2 class="">Why UEMK?</h2>
+    </section> -->
   </body>
 </html>
