added cards section

--- a/index.html
+++ b/index.html
@@ -77,8 +77,52 @@
       </div>
     </main>
 
-    <!-- <section class="college-desc">
-      <h2 class="">Why UEMK?</h2>
-    </section> -->
+    <section class="cards container">
+      <div class="card">
+        <img
+          class="card-img"
+          src="img/Homepage/cards/20190914-Carlson-Day-Football-8676.jpg"
+          alt=""
+        />
+        <h2>Upcoming Events</h2>
+        <p>
+          Explore upcoming events designed for Alumni to grow their network,
+          develop their business knowledge, reconnect with former classmates,
+          and celebrate their Gopher pride.
+        </p>
+
+        <a href="">FIND EVENTS</a>
+      </div>
+      <div class="card">
+        <img
+          class="card-img"
+          src="img/Homepage/cards/20190914-Carlson-Day-Football-8676.jpg"
+          alt=""
+        />
+        <h2>Upcoming Events</h2>
+        <p>
+          Explore upcoming events designed for Alumni to grow their network,
+          develop their business knowledge, reconnect with former classmates,
+          and celebrate their Gopher pride.
+        </p>
+
+        <a href="">FIND EVENTS</a>
+      </div>
+      <div class="card">
+        <img
+          class="card-img"
+          src="img/Homepage/cards/20190914-Carlson-Day-Football-8676.jpg"
+          alt=""
+        />
+        <h2>Upcoming Events</h2>
+        <p>
+          Explore upcoming events designed for Alumni to grow their network,
+          develop their business knowledge, reconnect with former classmates,
+          and celebrate their Gopher pride.
+        </p>
+
+        <a href="">FIND EVENTS</a>
+      </div>
+    </section>
   </body>
 </html>
