--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         ><img src="img/logo-3.png" alt=""
       /></a>
       <ul class="nav-links">
-        <li class="nav-link"><a href="">Home </a></li>
-        <li class="nav-link"><a href="">BCA</a></li>
+        <li class="nav-link"><a href="index.html">Home </a></li>
+        <li class="nav-link"><a href="bca.html">BCA</a></li>
         <li class="nav-link"><a href="">College Fest</a></li>
         <li class="nav-link"><a href="">Facilities</a></li>
       </ul>
@@ -81,7 +81,7 @@
       <div class="card">
         <img
           class="card-img"
-          src="img/Homepage/cards/20190914-Carlson-Day-Football-8676.jpg"
+          src="img/Homepage/cards/WhatsApp-Image-2022-02-11-at-9.25.45-PM.webp"
           alt=""
         />
         <h2>Upcoming Events</h2>
@@ -94,12 +94,8 @@
         <a href="">FIND EVENTS</a>
       </div>
       <div class="card">
-        <img
-          class="card-img"
-          src="img/Homepage/cards/20190914-Carlson-Day-Football-8676.jpg"
-          alt=""
-        />
-        <h2>Upcoming Events</h2>
+        <img class="card-img" src="img/Homepage/cards/image.webp" alt="" />
+        <h2>Networking</h2>
         <p>
           Explore upcoming events designed for Alumni to grow their network,
           develop their business knowledge, reconnect with former classmates,
@@ -109,11 +105,7 @@
         <a href="">FIND EVENTS</a>
       </div>
       <div class="card">
-        <img
-          class="card-img"
-          src="img/Homepage/cards/20190914-Carlson-Day-Football-8676.jpg"
-          alt=""
-        />
+        <img class="card-img" src="img/Homepage/cards/image-7.webp" alt="" />
         <h2>Upcoming Events</h2>
         <p>
           Explore upcoming events designed for Alumni to grow their network,
