added fest page

--- a/bca.html
+++ b/bca.html
@@ -19,8 +19,8 @@
         <ul class="nav-links">
             <li class="nav-link"><a href="index.html">Home </a></li>
             <li class="nav-link"><a href="bca.html">BCA</a></li>
-            <li class="nav-link"><a href="">College Fest</a></li>
-            <li class="nav-link"><a href="">Facilities</a></li>
+            <li class="nav-link"><a href="fest.html">College Fest</a></li>
+            <li class="nav-link"><a href="facilities.html">Facilities</a></li>
         </ul>
     </nav>
     <div class="secondary-nav">
