added facilities page

--- a/facilities.html
+++ b/facilities.html
@@ -56,5 +56,82 @@
           alt=""
       /></a>
     </div>
+
+    <main class="section-facilities">
+      <div class="rows-fs">
+        <h1>Facilities</h1>
+        <div class="row--f">
+          <img src="img/facilities/1.jpg" alt="" />
+          <div>
+            <h2>Laboratory</h2>
+            <p>
+              University of Engineering and management, Kolkata provides
+              state-of-the-art research facilities owing to which this institute
+              has created a repute of its own in the field of academics and
+              education. Well equipped laboratories with top notch facilities
+              serve as an added boon for the aspirants which help them in
+              exploring their subjects at a greater depth. A variety of
+              laboratories are yet to be opened at this institute to motivate
+              and inspire even more students to enhance their expertise in their
+              respective fields.
+            </p>
+          </div>
+        </div>
+
+        <div class="row--f">
+          <div>
+            <h2>Library</h2>
+            <p>
+              University of Engineering and management, Kolkata provides
+              well-furnished library facilities which encompass spacious reading
+              rooms, Internet and Reprographic facilities, digital book banks
+              and question banks for efficient utilization by the enrolled
+              students. It also provides repositories to ensure that the
+              students receive hassle free access to study materials anytime and
+              anywhere. Comprising a pool of international journals, educational
+              magazines and research publications by renowned national and
+              international authors and field experts, students here get the
+              incredible opportunity to explore their subjects at a greater
+              depth outside their classroom or library hours.
+            </p>
+          </div>
+          <img src="img/facilities/2.jpg" alt="" />
+        </div>
+
+        <div class="row--f">
+          <img src="img/facilities/3.jpg" alt="" />
+          <div>
+            <h2>Sports</h2>
+            <p>
+              Sports play a pivotal role in shaping one's personality and
+              maintaining good health. We've specially developed a sports
+              environment that matches international standards and gives a truly
+              global experience to all our students. All of which is provided to
+              them on the campus.
+            </p>
+          </div>
+        </div>
+
+        <div class="row--f">
+          <div>
+            <h2>Self-Defense Workshops</h2>
+            <p>
+              Our self defense workshop format allows our students the
+              flexibility of taking the Model Mugging Self Defense Courses. The
+              five workshop self defense series is same curriculum covered in
+              the women's Basic self defense course that is based on researching
+              thousands of assaults against women. Self Defense for Women
+              Introductory workshop teaches Model Mugging students basic
+              self-defense to grab from behind. Each self defense workshop
+              focuses on a specific category of attack that women may be
+              confronted. The categories deal with Rear Attacks, Ground
+              Reversals, and Boundary Setting while also establishing the
+              context behind crimes against women.
+            </p>
+          </div>
+          <img src="img/facilities/4.jpg" alt="" />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
