changes to html content

--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
           and celebrate their Gopher pride.
         </p>
 
-        <a href="">FIND EVENTS</a>
+        <a href="">STUDENTS CLUB</a>
       </div>
       <div class="card">
         <img class="card-img" src="img/Homepage/cards/image-7.webp" alt="" />
-        <h2>Upcoming Events</h2>
+        <h2>Project Showcase '22</h2>
         <p>
           Explore upcoming events designed for Alumni to grow their network,
           develop their business knowledge, reconnect with former classmates,
           and celebrate their Gopher pride.
         </p>
 
-        <a href="">FIND EVENTS</a>
+        <a href="">VIEW PROJECTS</a>
       </div>
     </section>
   </body>
