more misc changes in html, changed description of cards in index page

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         />
         <h2>Upcoming Events</h2>
         <p>
-          Explore upcoming events designed for Alumni to grow their network,
-          develop their business knowledge, reconnect with former classmates,
-          and celebrate their Gopher pride.
+          Explore upcoming events designed for students to grow their network,
+          develop their knowledge, connect with classmates, and take part in
+          them yourselves.
         </p>
 
         <a href="">FIND EVENTS</a>
@@ -97,9 +97,8 @@
         <img class="card-img" src="img/Homepage/cards/image.webp" alt="" />
         <h2>Networking</h2>
         <p>
-          Explore upcoming events designed for Alumni to grow their network,
-          develop their business knowledge, reconnect with former classmates,
-          and celebrate their Gopher pride.
+          Network and meet aspiring students, join University of Engineering and
+          Management, Kolkata. Make projects, get recognition and much more!
         </p>
 
         <a href="">STUDENTS CLUB</a>
@@ -108,9 +107,8 @@
         <img class="card-img" src="img/Homepage/cards/image-7.webp" alt="" />
         <h2>Project Showcase '22</h2>
         <p>
-          Explore upcoming events designed for Alumni to grow their network,
-          develop their business knowledge, reconnect with former classmates,
-          and celebrate their Gopher pride.
+          Explore projects submitted by our talented students at University of
+          Engineering and Management, Kolkata.
         </p>
 
         <a href="">VIEW PROJECTS</a>
