--- a/bca.html
+++ b/bca.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Section Navigation -->
     <nav class="navigation-bar">
-        <a class="nav-logo" href="index.html"><img src="img/logo-3.png" alt="" /></a>
+        <a class="nav-logo" href="index.html"><img src="img/logo-3.jpg" alt="" /></a>
         <ul class="nav-links">
             <li class="nav-link"><a href="index.html">Home </a></li>
             <li class="nav-link"><a href="bca.html">BCA</a></li>
