--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Section Navigation -->
     <nav class="navigation-bar">
       <a class="nav-logo" href="index.html"
-        ><img src="img/logo-3.png" alt=""
+        ><img src="img/logo-3.jpg" alt=""
       /></a>
       <ul class="nav-links">
         <li class="nav-link"><a href="index.html">Home </a></li>
