chnages in html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h2>Project Showcase '22</h2>
         <p>
           Explore projects submitted by our talented students at University of
-          Engineering and Management, Kolkata.
+          and explore opportunities at Engineering and Management, Kolkata.
         </p>
 
         <a href="">VIEW PROJECTS</a>
