misc changes to HTML in index page

--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
       <div class="hero-overlay">
         <h1>University of Engineering and Management, Kolkata</h1>
         <p class="overlay-text">
-          University of Engineering & Management (UEM) aims to provide an
-          international ambience and exposure with innovative teaching
-          techniques and courses which are tailor-made (technical & soft skills)
-          for the job market giving the students the winning edge and
-          competitive advantage during placements.
+          University of Engineering & Management (UEM), Kolkata located in New
+          Town, Kolkata is one best college to pursue BCA in West Bengal. It
+          provides hands on learning in every technical and engineering field,
+          it has modern labs, a huge library, plethora of events and much more.
         </p>
         <a class="learn-more-hero" href=""
           >LEARN MORE<img
